--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-adapter",
   "description": "Base adapter class that all other js-data adapters extend.",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "homepage": "https://github.com/js-data/js-data-adapter",
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
     "ci": "npm run test && cat coverage/lcov.info | coveralls || true"
   },
   "peerDependencies": {
-    "js-data": "^3.0.0-alpha.18"
+    "js-data": "^3.0.0-alpha.19"
   },
   "devDependencies": {
     "babel-core": "6.7.2",
@@ -40,7 +40,7 @@
     "chai": "3.5.0",
     "coveralls": "2.11.8",
     "istanbul": "0.4.2",
-    "js-data-adapter-tests": "^2.0.0-alpha.15",
+    "js-data-adapter-tests": "2.0.0-alpha.16",
     "js-data-repo-tools": "0.2.0",
     "mocha": "2.4.5",
     "rollup": "0.25.4",
