--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-adapter",
   "description": "Base adapter class that all other js-data adapters extend.",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "homepage": "https://github.com/js-data/js-data-adapter",
   "repository": {
     "type": "git",
@@ -10,6 +10,13 @@
   "author": "js-data-adapter project authors",
   "license": "MIT",
   "main": "./dist/js-data-adapter.js",
+  "typings": "./dist/js-data-adapter.d.ts",
+  "files": [
+    "dist/",
+    "src/",
+    "AUTHORS",
+    "CONTRIBUTORS"
+  ],
   "keywords": [
     "js-data",
     "jsdata",
@@ -31,10 +38,10 @@
     "ci": "npm run test && cat coverage/lcov.info | codecov"
   },
   "peerDependencies": {
-    "js-data": "^3.0.0-beta.1"
+    "js-data": "^3.0.0-beta.2"
   },
   "devDependencies": {
-    "babel-core": "6.7.6",
+    "babel-core": "6.7.7",
     "babel-polyfill": "6.7.4",
     "babel-preset-es2015-rollup": "1.1.1",
     "chai": "3.5.0",
@@ -43,11 +50,10 @@
     "js-data-adapter-tests": "2.0.0-alpha.16",
     "js-data-repo-tools": "0.3.0",
     "mocha": "2.4.5",
-    "rollup": "0.25.8",
+    "rollup": "0.26.1",
     "rollup-plugin-babel": "2.4.0",
     "sinon": "1.17.3",
     "source-map-support": "0.4.0",
     "watch": "0.17.1"
-  },
-  "dependencies": {}
+  }
 }
