--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-adapter",
   "description": "Base adapter class that all other js-data adapters extend.",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "homepage": "https://github.com/js-data/js-data-adapter",
   "repository": {
     "type": "git",
@@ -15,7 +15,8 @@
     "dist/",
     "src/",
     "AUTHORS",
-    "CONTRIBUTORS"
+    "CONTRIBUTORS",
+    "typings.json"
   ],
   "keywords": [
     "js-data",
