--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-adapter",
   "description": "Base adapter class that all other js-data adapters extend.",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "homepage": "https://github.com/js-data/js-data-adapter",
   "repository": {
     "type": "git",
@@ -26,6 +26,9 @@
   "standard": {
     "parser": "babel-eslint"
   },
+  "babel": {
+    "presets": ["es2015-rollup"]
+  },
   "scripts": {
     "lint": "repo-tools lint src/index.js rollup.config.js",
     "bundle": "rollup -c rollup.config.js -f umd -o dist/js-data-adapter.js -m dist/js-data-adapter.js.map src/index.js",
@@ -42,19 +45,14 @@
     "js-data": "^3.0.0-beta.2"
   },
   "devDependencies": {
-    "babel-core": "6.7.7",
     "babel-polyfill": "6.7.4",
     "babel-preset-es2015-rollup": "1.1.1",
-    "chai": "3.5.0",
-    "codecov": "1.0.1",
     "istanbul": "0.4.3",
     "js-data-adapter-tests": "2.0.0-alpha.16",
-    "js-data-repo-tools": "0.3.0",
-    "mocha": "2.4.5",
+    "js-data-repo-tools": "0.5.0",
     "rollup": "0.26.1",
     "rollup-plugin-babel": "2.4.0",
-    "sinon": "1.17.3",
     "source-map-support": "0.4.0",
-    "watch": "0.17.1"
+    "watch": "0.18.0"
   }
 }
