--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-adapter",
   "description": "Base adapter class that all other js-data adapters extend.",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "homepage": "https://github.com/js-data/js-data-adapter",
   "repository": {
     "type": "git",
@@ -27,7 +27,9 @@
     "parser": "babel-eslint"
   },
   "babel": {
-    "presets": ["es2015-rollup"]
+    "presets": [
+      "es2015-rollup"
+    ]
   },
   "scripts": {
     "lint": "repo-tools lint src/index.js rollup.config.js",
@@ -45,12 +47,12 @@
     "js-data": "^3.0.0-beta.2"
   },
   "devDependencies": {
-    "babel-polyfill": "6.7.4",
+    "babel-polyfill": "6.8.0",
     "babel-preset-es2015-rollup": "1.1.1",
     "istanbul": "0.4.3",
     "js-data-adapter-tests": "2.0.0-alpha.16",
-    "js-data-repo-tools": "0.5.0",
-    "rollup": "0.26.1",
+    "js-data-repo-tools": "0.5.1",
+    "rollup": "0.26.3",
     "rollup-plugin-babel": "2.4.0",
     "source-map-support": "0.4.0",
     "watch": "0.18.0"
