--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-adapter",
   "description": "Base adapter class that all other js-data adapters extend.",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "homepage": "https://github.com/js-data/js-data-adapter",
   "repository": {
     "type": "git",
@@ -72,15 +72,7 @@
   "devDependencies": {
     "babel-plugin-syntax-async-functions": "6.8.0",
     "babel-plugin-transform-regenerator": "6.8.0",
-    "babel-polyfill": "6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-rollup": "1.1.1",
     "babel-preset-stage-0": "6.5.0",
-    "js-data-repo-tools": "0.5.1",
-    "nyc": "6.4.4",
-    "rollup": "0.26.3",
-    "rollup-plugin-babel": "2.4.0",
-    "source-map-support": "0.4.0",
-    "watch": "0.18.0"
+    "js-data-repo-tools": "0.5.2"
   }
 }
