--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,8 @@ machine:
 dependencies:
   pre:
     - npm i -g npm
-    - npm i -g codecov nyc js-data@beta
+    - npm i -g codecov nyc
+    - npm i js-data@beta
 test:
   post:
     - nyc report --reporter=lcov | codecov
