--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-adapter",
   "description": "Base adapter class that all other js-data adapters extend.",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "homepage": "https://github.com/js-data/js-data-adapter",
   "repository": {
     "type": "git",
@@ -64,10 +64,12 @@
     "release": "npm test && repo-tools updates && repo-tools changelog && repo-tools authors"
   },
   "peerDependencies": {
-    "chai": "3.x",
-    "js-data": "^3.0.0-beta.6",
-    "mocha": "2.x",
-    "sinon": "1.x"
+    "js-data": "^3.0.0-beta.6"
+  },
+  "dependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.4"
   },
   "devDependencies": {
     "babel-plugin-syntax-async-functions": "6.8.0",
