--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-data-adapter",
   "description": "Base adapter class that all other js-data adapters extend.",
-  "version": "0.8.4",
+  "version": "0.8.5",
   "homepage": "https://github.com/js-data/js-data-adapter",
   "repository": {
     "type": "git",
@@ -41,22 +41,10 @@
       "dist/"
     ]
   },
-  "babel": {
-    "presets": [
-      [
-        "es2015"
-      ],
-      "stage-0"
-    ],
-    "plugins": [
-      "syntax-async-functions",
-      "transform-regenerator"
-    ]
-  },
   "scripts": {
-    "lint": "repo-tools lint \"**/*.js\"",
-    "bundle_adapter": "rollup -c rollup.config.js -f umd -o dist/js-data-adapter.js -m dist/js-data-adapter.js.map src/index.js",
-    "bundle_tests": "rollup -c rollup-tests.config.js -f umd -o dist/js-data-adapter-tests.js -m dist/js-data-adapter-tests.js.map test/index.js",
+    "lint": "standard lint '**/*.js'",
+    "bundle_adapter": "rollup src/index.js -c -o dist/js-data-adapter.js -m dist/js-data-adapter.js.map -f umd",
+    "bundle_tests": "rollup test/index.js -c rollup-tests.config.js -o dist/js-data-adapter-tests.js -m dist/js-data-adapter-tests.js.map -f umd",
     "bundle": "npm run bundle_adapter && npm run bundle_tests",
     "watch": "watch \"npm run bundle\" src/",
     "build": "npm run lint && npm run bundle",
@@ -71,13 +59,23 @@
   "dependencies": {
     "chai": "^4.0.2",
     "js-data": "^3.0.0-rc.9",
-    "mocha": "^3.1.2",
+    "mocha": "^3.4.2",
     "sinon": "^2.3.6"
   },
   "devDependencies": {
+    "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
+    "babel-plugin-external-helpers": "6.22.0",
     "babel-plugin-syntax-async-functions": "6.13.0",
+    "babel-plugin-transform-es2015-modules-umd": "6.24.1",
     "babel-plugin-transform-regenerator": "6.24.1",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "js-data-repo-tools": "1.0.0"
+    "js-data-repo-tools": "1.0.0",
+    "nyc": "11.0.3",
+    "rollup": "0.43.0",
+    "rollup-plugin-babel": "2.7.1",
+    "standard": "10.0.2"
   }
 }
