--- a/package.json
+++ b/package.json
@@ -57,10 +57,7 @@
     "js-data": ">= 3.0.0"
   },
   "dependencies": {
-    "chai": "^4.0.2",
-    "js-data": ">= 3.0.0",
-    "mocha": "^3.4.2",
-    "sinon": "^2.3.6"
+    "js-data": ">= 3.0.0"
   },
   "devDependencies": {
     "babel-core": "6.25.0",
@@ -76,6 +73,9 @@
     "nyc": "11.0.3",
     "rollup": "0.43.0",
     "rollup-plugin-babel": "2.7.1",
-    "standard": "10.0.2"
+    "standard": "10.0.2",
+    "sinon": "^2.3.6",
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
   }
 }
