upgrade dependencies (babel, eslint, rollup, ...)

--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "bundle": "npm run bundle_adapter && npm run bundle_tests",
     "watch": "watch \"npm run bundle\" src/",
     "build": "npm run lint && npm run bundle",
-    "mocha": "mocha -t 2000 -R dot mocha.start.js -r babel-core/register -r babel-polyfill",
-    "cover": "nyc --require babel-core/register --require babel-polyfill --cache mocha mocha.start.js -t 2000 -R dot && nyc report --reporter=html",
+    "mocha": "mocha -t 2000 -R dot mocha.start.js -r @babel/register -r @babel/polyfill",
+    "cover": "nyc --require @babel/register --require @babel/polyfill --cache mocha mocha.start.js -t 2000 -R dot && nyc report --reporter=html",
     "test": "npm run build && npm run cover",
     "release": "npm test && repo-tools updates && repo-tools changelog && repo-tools authors"
   },
@@ -60,22 +60,26 @@
     "js-data": ">= 3.0.0"
   },
   "devDependencies": {
-    "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
-    "babel-plugin-external-helpers": "6.22.0",
-    "babel-plugin-syntax-async-functions": "6.13.0",
-    "babel-plugin-transform-es2015-modules-umd": "6.24.1",
-    "babel-plugin-transform-regenerator": "6.24.1",
-    "babel-polyfill": "6.23.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-external-helpers": "^7.8.3",
+    "@babel/plugin-transform-modules-umd": "^7.8.3",
+    "@babel/plugin-transform-regenerator": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/register": "^7.8.3",
+    "@types/chai": "^4.2.7",
+    "@types/mocha": "^5.2.7",
+    "@types/sinon": "^7.5.1",
+    "babel-eslint": "^10.0.3",
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
     "js-data-repo-tools": "1.0.0",
-    "nyc": "11.0.3",
-    "rollup": "0.43.0",
-    "rollup-plugin-babel": "2.7.1",
-    "standard": "10.0.2",
-    "sinon": "^2.3.6",
-    "chai": "^4.0.2",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "nyc": "^15.0.0",
+    "rollup": "^1.29.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "sinon": "^8.1.0",
+    "standard": "10.0.2"
   }
 }
